Fixes #15613: Show login button/user menu on mobile view

--- a/netbox/project-static/styles/overrides/_bootstrap.scss
+++ b/netbox/project-static/styles/overrides/_bootstrap.scss
@@ -14,3 +14,9 @@ html {
 .progress {
   min-width: 80px;
 }
+
+// Reduce vertical margin around dropdown menu divider
+hr.dropdown-divider {
+  margin-bottom: 0.25rem;
+  margin-top: 0.25rem;
+}
